--- a/main.css
+++ b/main.css
@@ -1,10 +1,18 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 nav {
-	padding: 10px
+	padding: 30px;
+	margin-bottom: 20px;
 	height: 40px;
 	background-color: grey;
 	position: fixed
 	width: 100%;
 	top: 0;
+	position: fixed;
+
 }
 
 ul {
@@ -19,20 +27,24 @@ li {
 .GList {
 	font-color: black;
 	font-family: Helvetica;
-	padding-right: 1060px
+	padding-right: 1060px;
+	position: fixed;
 }
 
 .PA {
 	display: inline-block;
 	padding-right: 10px;
 	font-color: purple;
-	font-family: Helvetica
+	font-family: Helvetica;
 	padding-right: 10px;
+	position: fixed;
 
 }
 
 .search {
-	display: inline-block
+	width: 200px;
+	height: 40px;
+	display: inline-block;
 	font-family: Helvetica;
 	margin-top: 30px
 	padding-right: 10px
@@ -58,8 +70,8 @@ p {
 }
 
 .pages {
+	padding-top: 20px;
 	display: inline-block;
-	border: 2px solid black;
 	height: 40px;
 	margin-left: 200px;
 	font-family: Helvetica
@@ -68,21 +80,18 @@ p {
 .prev {
   display: inline-block;
   border: 2px solid black;
-  height: 40px;
   padding-right: 2px;
 }
 
 .numbers {
   display: inline-block;
   border: 2px solid black;
-  height: 40px;
   padding-right: 2px;
 }
 
 .next {
   display: inline-block;
   border: 2px solid black;
-  height: 40px;
   padding-left: 2px;
   padding-right: 2px
 }
