--- a/main.css
+++ b/main.css
@@ -4,11 +4,11 @@
 }
 
 nav {
+	position: fixed;
 	padding: 30px;
 	margin-bottom: 20px;
 	height: 40px;
 	background-color: grey;
-	position: fixed;
 	width: 100%;
 	top: 0;
 
@@ -40,29 +40,36 @@ nav ul li {
 }
 
 .search {
-	width: 200px;
-	height: 40px;
-	display: inline-block;
+	box-sizing: border-box;
 	font-family: Helvetica;
 	margin-top: 150px;
-	padding-right: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 250px;
 
 }
+
 .search input {
 	font-size: 20px;
+	width: 150px;
+	height: 30px;
+	float: left;
+	margin-right: 5px;
 }
 
-form {
+.search form {
+	position: relative;
+	box-sizing: border-box;
+	vertical-align: bottom;
+	padding: 10px;
 	border: 10px grey;
-	margin-left: 500px;
 }
 
 .MGlass {
-	margin-left: 650px;
-	border: 2px solid black;
+	border: 2px solid grey;
 	width: 30px;
-	width: 30px;
-	margin-top: -40px;
+	height: 30px;
+	float: left;
 }
 
 p {
@@ -72,9 +79,11 @@ p {
 
 .pages {
 	padding-top: 20px;
-	display: inline-block;
 	height: 40px;
-	margin-left: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 250px;
+	margin-top: 30px;
 	font-family: Helvetica
 }
 
@@ -82,25 +91,33 @@ p {
   display: inline-block;
   border: 2px solid black;
   padding-right: 2px;
+  text-decoration: none;
 }
 
 .numbers {
   display: inline-block;
   border: 2px solid black;
   padding-right: 2px;
+  text-decoration: none;
 }
 
 .next {
   display: inline-block;
   border: 2px solid black;
   padding-left: 2px;
-  padding-right: 2px
+  padding-right: 2px;
+  text-decoration: none;
 }
 
 
 main {
 	margin-left: 100px;
+	margin-top: 40px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	font-family: Helvetica
+}
+
+section li {
+	margin-bottom: 20px;
 }
